Added functional navigation bar & minor meta changes

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     font-style: normal;
 }
 
+:root {
+    --primary: #111;
+    --secondary: #FFF;
+    --accent: #0080FF;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -13,26 +19,110 @@
     overflow-x: hidden;
     scroll-behavior: smooth;
     font-family: 'Montserrat', sans-serif;
+    border: none;
+    outline: none;
 }
 
-:root {
-    --primary: #111;
-    --secondary: #FFF;
-    --accent: #0080FF;
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+body > * > * {
+    position: relative; z-index: 2;
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
     height: 10vh;
+    padding: 0 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--primary);
+    z-index: 2;
+}
+nav img {
+    width: 15%;
+}
+nav ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 30% 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transform: translateX(100vw);
+    background-color: var(--secondary);
+    color: var(--primary);
+    transition: 400ms;
+}
+nav li {
+    width: 100%;
+    padding: 5%;
+    display: inline-block;
+    font-family: 'Aquire';
+    font-size: clamp(24pt, 10%, 48pt);
+    color: var(--primary);
+}
+#menu {
+    height: 30px;
+    aspect-ratio: 1.25;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    z-index: 2;
+}
+#menu hr, #menu hr::before, #menu hr::after {
+    width: 100%;
+    height: 5px;
+    background-color: var(--secondary);
+    border-radius: 10px;
+    transition: 400ms;
+}
+#menu hr::before, #menu hr::after {
+    content: '';
+    position: absolute;
+    left: 0;
+}
+#menu hr::before {
+    top: 0;
+}
+#menu hr::after {
+    bottom: 0;
+}
+.open ul {
+    transform: none;
+}
+.open #menu hr::before, .open #menu hr::after {
+    background-color: var(--primary);
+}
+.open #menu hr::before {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+}
+.open #menu hr::after {
+    bottom: 50%;
+    transform: translateY(50%) rotate(-45deg);
+}
+
+header, main {
+    height: 100vh;
 }
 
 header {
-    height: 100vh;
     background-color: var(--primary);
 }
 
 main {
-    height: 100vh;
     background-color: var(--secondary);
 }
 
@@ -52,8 +142,37 @@ body > img {
 
 
 @media screen and (orientation: landscape) {
+
+    nav {
+        height: 15vh;
+    }
+    nav img {
+        width: unset;
+        height: 80%;
+        aspect-ratio: 1;
+    }
+    nav #menu {
+        display: none;
+    }
+    nav ul {
+        position: static;
+        width: unset;
+        height: unset;
+        padding: 0;
+        flex-direction: row;
+        column-gap: 30px;
+        transform: none;
+        background-color: transparent;
+    }
+    nav li {
+        width: unset;
+        padding: 0;
+        font-family: 'Montserrat';
+        font-size: 12pt;
+        color: var(--secondary);
+    }
+
     body > img {
-        position: absolute;
         top: 25%;
         right: 10%;
         width: 25%;
