--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
 @font-face {
     font-family: 'Aquire';
     src: url("assets/fonts/Aquire-BW0ox.otf");
-    font-weight: normal;
-    font-style: normal;
 }
 
 :root {
@@ -21,11 +19,22 @@
     font-family: 'Montserrat', sans-serif;
     border: none;
     outline: none;
+    list-style: none;
+}
+*::selection {
+    background-color: var(--accent);
+    color: var(--primary);
 }
 
 a {
-    text-decoration: none;
+    display: block;
     color: inherit;
+    text-decoration: none;
+}
+
+h1 {
+    font-family: 'Aquire', sans-serif;
+    color: var(--secondary);
 }
 
 body > * > * {
@@ -43,7 +52,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     background-color: var(--primary);
-    z-index: 2;
+    z-index: 3;
 }
 nav img {
     width: 15%;
@@ -68,7 +77,7 @@ nav li {
     width: 100%;
     padding: 5%;
     display: inline-block;
-    font-family: 'Aquire';
+    font-family: 'Aquire', sans-serif;
     font-size: clamp(24pt, 10%, 48pt);
     color: var(--primary);
 }
@@ -79,7 +88,6 @@ nav li {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    z-index: 2;
 }
 #menu hr, #menu hr::before, #menu hr::after {
     width: 100%;
@@ -119,7 +127,78 @@ header, main {
 }
 
 header {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--primary);
+}
+header ul {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    overflow-y: hidden;
+}
+header li {
+    position: absolute;
+    bottom: -25%;
+    width: 10%;
+    aspect-ratio: 1;
+    background-image: linear-gradient(#FFF5, #FFF1);
+    animation: float 7s infinite linear;
+    opacity: 0.5;
+}
+header li:nth-child(1) {
+    left: 5%;
+    animation-delay: 1s;
+}
+header li:nth-child(2) {
+    left: 20%;
+    animation-delay: 4s;
+}
+header li:nth-child(3) {
+    left: 35%;
+    animation-delay: 2s;
+}
+header li:nth-child(4) {
+    left: 55%;
+}
+header li:nth-child(5) {
+    left: 65%;
+    animation-delay: 5s;
+}
+header li:nth-child(6) {
+    left: 75%;
+    animation-delay: 3s;
+}
+header li:nth-child(7) {
+    left: 85%;
+    animation-delay: 6s;
+}
+header > div {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 40px;
+}
+header h1 {
+    font-size: clamp(24pt, 10vw, 60pt);
+}
+header span {
+    color: var(--secondary);
+    font-size: clamp(10pt, 3vw, 30pt);
+}
+header button {
+    width: 40%;
+    padding: 7px;
+    background-color: var(--accent);
+    color: var(--secondary);
+    border-radius: 24px;
+    font-size: clamp(10pt, 3vw, 30pt);
+    font-weight: 600;
+    cursor: pointer;
 }
 
 main {
@@ -137,7 +216,7 @@ body > img {
     left: 50%;
     width: 60%;
     transform: translate(-50%);
-    opacity: 0.5;
+    opacity: 0.25;
 }
 
 
@@ -172,6 +251,21 @@ body > img {
         color: var(--secondary);
     }
 
+    header > div {
+        row-gap: 25px;
+    }
+    header h1 {
+        font-size: clamp(24pt, 6vw, 50pt);
+    }
+    header span {
+        color: var(--secondary);
+        font-size: clamp(6pt, 1.5vw, 20pt);
+    }
+    header button {
+        width: 20%;
+        font-size: clamp(6pt, 1.5vw, 20pt);
+    }
+
     body > img {
         top: 25%;
         right: 10%;
@@ -188,4 +282,13 @@ body > img {
 ::-webkit-scrollbar-thumb {
     background-color: var(--accent);
     border-radius: 24px;
+}
+
+@keyframes float {
+    to {
+        bottom: 100%;
+        transform: rotate(360deg) scale(0.1);
+        opacity: 0.1;
+        border-radius: 50%;
+    }
 }
