--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 @font-face {
     font-family: 'Aquire';
-    src: url("assets/fonts/Aquire-BW0ox.otf");
+    src: url('assets/fonts/AquireLight.otf');
 }
 
 :root {
@@ -14,7 +14,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
     scroll-behavior: smooth;
     font-family: 'Montserrat', sans-serif;
     border: none;
@@ -26,14 +25,24 @@
     color: var(--primary);
 }
 
+html {
+    overflow-x: hidden;
+}
+
 a {
+    height: 100%;
+    width: 100%;
     display: block;
     color: inherit;
     text-decoration: none;
+    font-family: inherit;
+}
+
+.font-aquire {
+    font-family: 'Aquire', sans-serif;
 }
 
 h1 {
-    font-family: 'Aquire', sans-serif;
     color: var(--secondary);
 }
 
@@ -75,11 +84,15 @@ nav ul {
 }
 nav li {
     width: 100%;
-    padding: 5%;
+    padding: 10%;
     display: inline-block;
-    font-family: 'Aquire', sans-serif;
     font-size: clamp(24pt, 10%, 48pt);
+    font-weight: 600; 
     color: var(--primary);
+}
+nav a:hover, nav a:focus, nav a:active {
+    color: var(--accent);
+    transition: 400ms;
 }
 #menu {
     height: 30px;
@@ -122,12 +135,9 @@ nav li {
     transform: translateY(50%) rotate(-45deg);
 }
 
-header, main {
-    height: 100vh;
-}
-
 header {
     position: relative;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,6 +195,7 @@ header > div {
 }
 header h1 {
     font-size: clamp(24pt, 10vw, 60pt);
+    font-weight: 500;
 }
 header span {
     color: var(--secondary);
@@ -195,14 +206,61 @@ header button {
     padding: 7px;
     background-color: var(--accent);
     color: var(--secondary);
+    border: 1px solid var(--accent);
     border-radius: 24px;
-    font-size: clamp(10pt, 3vw, 30pt);
+    font-size: clamp(7pt, 2.5vw, 24pt);
     font-weight: 600;
     cursor: pointer;
+    transition: 400ms;
+}
+header button:hover, header button:focus, header button:active {
+    background-color: var(--primary);
+    color: var(--accent);
 }
 
 main {
+    padding: 0 5%;
+    z-index: 0;
+}
+
+#services {
+    min-height: 100vh;
+    padding: 10vh 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 85px;
     background-color: var(--secondary);
+}
+#services h2 {
+    width: 100%;
+    color: var(--accent);
+    text-align: left;
+}
+#services > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    row-gap: min(50px, 3vh);
+}
+#services article {
+    width: 100%;
+    max-width: 320px;
+    padding: 5%;
+    display: flex;
+    background-color: var(--secondary);
+    box-sizing: content-box;
+    box-shadow: 0 5px 10px 3px #0003;
+}
+#service article p {
+    margin-top: 5%;
+}
+#services article img {
+    width: 100%;
+    min-width: 125px;
+    margin-left: 5px;
 }
 
 footer {
@@ -219,6 +277,28 @@ body > img {
     opacity: 0.25;
 }
 
+body > div {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 5vh;
+    background-color: var(--primary);
+    color: var(--accent);
+    font-size: 7vw;
+    letter-spacing: 10px;
+    z-index: 4;
+}
+body > div svg {
+    width: 10vw;
+    height: auto;
+    animation: bounce 1s cubic-bezier(0.3, 0.8, 0.4, 0.6) infinite alternate;
+}
 
 @media screen and (orientation: landscape) {
 
@@ -246,7 +326,7 @@ body > img {
     nav li {
         width: unset;
         padding: 0;
-        font-family: 'Montserrat';
+        font-family: 'Montserrat', sans-serif;
         font-size: 12pt;
         color: var(--secondary);
     }
@@ -266,20 +346,43 @@ body > img {
         font-size: clamp(6pt, 1.5vw, 20pt);
     }
 
+    #services {
+        padding-top: 20vh;
+        row-gap: 25px;
+    }
+    #services > div {
+        gap: max(25px, 3vh);
+    }
+    #services article {
+        width: 25%;
+        min-width: 300px;
+        padding: 3%;
+    }
+
     body > img {
         top: 25%;
         right: 10%;
         width: 25%;
         transform: rotate(15deg);
     }
+
+    body > div {
+        row-gap: 10vh;
+        font-size: 7vh;
+    }
+    body > div svg {
+        width: 3vw;
+        height: auto;
+        animation: bounce 1s cubic-bezier(0.3, 0.8, 0.4, 0.6) infinite alternate;
+    }
 }
 
 
-::-webkit-scrollbar {
+html::-webkit-scrollbar {
     width: 7px;
     background-color: var(--primary);
 }
-::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
     background-color: var(--accent);
     border-radius: 24px;
 }
@@ -290,5 +393,10 @@ body > img {
         transform: rotate(360deg) scale(0.1);
         opacity: 0.1;
         border-radius: 50%;
+    }
+}
+@keyframes bounce {
+    to {
+        transform: translateY(30px);
     }
 }
