--- a/style.css
+++ b/style.css
@@ -220,18 +220,19 @@ header button:hover, header button:focus, header button:active {
 
 main {
     padding: 0 5%;
+    background-color: var(--secondary);
     z-index: 0;
 }
 
 #services {
     min-height: 100vh;
-    padding: 10vh 0;
+    padding: 15vh 0 10vh 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     row-gap: 85px;
-    background-color: var(--secondary);
+    z-index: 0;
 }
 #services h2 {
     width: 100%;
@@ -253,6 +254,9 @@ main {
     background-color: var(--secondary);
     box-sizing: content-box;
     box-shadow: 0 5px 10px 3px #0003;
+}
+#service article h3 {
+    color: var(--primary);
 }
 #service article p {
     margin-top: 5%;
